# tarkka

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: android.rs  de.rs  download_and_split.rs  indexer.rs  kaikki.rs  lib.rs  lookup.rs  main.rs  reader.rs  ser.rs  split_by_lang.rs  test_decompress.rs  test_enum.rs  test_ser.rs
tarkka_derive/: Cargo.toml
tarkka_derive/src/: lib.rs
