[package]
name = "tarkka"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lookup"
path = "src/lookup.rs"

[[bin]]
name = "split_by_lang"
path = "src/split_by_lang.rs"

[[bin]]
name = "download_and_split"
path = "src/download_and_split.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tarkka"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
zeekstd = "0.6.0"
zstd = "0.13"
ureq = "2.9"
threadpool = "1.8"
flate2 = "1.0"
tarkka_derive = { path = "tarkka_derive" }
itertools = "0.14.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[profile.release]
debug = true

