[package]
name = "tarkka"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "indexer"
path = "src/indexer.rs"
required-features = ["indexer"]

[[bin]]
name = "lookup"
path = "src/lookup.rs"

[[bin]]
name = "download_and_split"
path = "src/download_and_split.rs"
required-features = ["indexer"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "tarkka"
path = "src/lib.rs"

[dependencies]
ureq = { version = "2.9", optional = true }
threadpool = { version = "1.8", optional = true }
serde_json = { version = "1.0.143", optional = true }
flate2 = { version = "1.0", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

itertools = { version = "0.14.0" }
zeekstd = "0.6.0"
#zstd-sys = { version = "2", features = ["fat-lto"]}
zstd-sys = { version = "2"}
tarkka_derive = { path = "tarkka_derive" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[features]
indexer = ["ureq", "threadpool", "serde", "serde_json", "flate2"]

[profile.release]
debug = false
#lto = "fat"
#panic = "abort"
#codegen-units = 1
strip = true
